--- a/src/Blazor.Server.UI/Resources/Components/Shared/SideMenu.resx
+++ b/src/Blazor.Server.UI/Resources/Components/Shared/SideMenu.resx
@@ -133,7 +133,7 @@
     <value>Banking</value>
   </data>
   <data name="Blazor Dashbord" xml:space="preserve">
-    <value>Blazor Dashbord</value>
+    <value>SecurityOne Dashboard</value>
   </data>
   <data name="Booking" xml:space="preserve">
     <value>Booking</value>
@@ -154,7 +154,7 @@
     <value>Departments</value>
   </data>
   <data name="Deshbord" xml:space="preserve">
-    <value>Deshbord</value>
+    <value>Dashboard</value>
   </data>
   <data name="Designations" xml:space="preserve">
     <value>Designations</value>
